[tool.poetry]
name = "realworld-python-flask-sql"
version = "0.1.0"
description = ""
authors = ["Marcus Vinicius Monteiro de Souza <marcusmonteirodesouza@gmail.com>"]
readme = "README.md"
packages = [{include = "realworld_python_flask_sql"}]

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
