[tool.poetry]
name = "realworld-python-flask-sql"
version = "0.1.0"
description = ""
authors = ["Marcus Vinicius Monteiro de Souza <marcusmonteirodesouza@gmail.com>"]
readme = "README.md"
packages = [{include = "realworld_python_flask_sql"}]

[tool.poetry.dependencies]
python = "^3.11"
psycopg = {extras = ["binary"], version = "^3.1.8"}
quart = "^0.18.3"
quart-schema = "^0.14.3"


[tool.poetry.group.dev.dependencies]
black = "^23.1.0"
python-dotenv = {extras = ["cli"], version = "^0.21.1"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
