[tool.poetry]
name = "realworld-python-quart-sql"
version = "0.1.0"
description = ""
authors = ["Marcus Vinicius Monteiro de Souza <marcusmonteirodesouza@gmail.com>"]
readme = "README.md"
packages = [{include = "conduit"}]

[tool.poetry.dependencies]
python = "^3.10.9"
psycopg = {extras = ["binary"], version = "^3.1.8"}
quart = "^0.18.3"
quart-schema = "^0.14.3"
validators = "^0.20.0"
hypercorn = "^0.14.3"
quart-jwt-extended = "^0.1.0"
awesome-slugify = "^1.6.5"


[tool.poetry.group.dev.dependencies]
black = "^23.1.0"
python-dotenv = {extras = ["cli"], version = "^0.21.1"}
pytest = "^7.2.1"
pytest-asyncio = "^0.20.3"
faker = "^16.8.1"
pre-commit = "^3.0.4"
pyjwt = "^2.6.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
